# fastaprot

./: README.md  pyproject.toml
src/fastaprot/: __init__.py  main.py
