[build-system]
requires=["hatchling"]
build-backend = "hatchling.build"

[project]

name = "fastaprot"
version = "0.1.0"
description = "A lightweight python library for extracting useful information from uniprot fasta files."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Sayan Patra", email = "patrasayan2024@gmail.com"}
]
keywords = ["fasta", "protein", "uniprot", "proteomics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/PatraSayan/fastaprot"

[tool.hatch.build.targets.wheel]
packages = ["src/fastaprot"]